syntax="proto3";
option csharp_namespace = "IrrigationSystemServer";
import "base.proto";

service ServerGrpc {
  rpc SendSensorData(SensorData) returns (Empty);
}

message SensorData {
  string client_id = 1;
  int32 sensor_pin = 2;
  float sensor_reading = 3;
}

